--- a/app/src/main/res/layout/activity_review_search.xml
+++ b/app/src/main/res/layout/activity_review_search.xml
@@ -28,7 +28,7 @@
                     android:includeFontPadding="false"
                     android:textColor="#ED6868"
                     android:textSize="20dp"
-                    android:text="검색"/>
+                    android:text="리뷰 검색"/>
             </com.google.android.material.appbar.MaterialToolbar>
         </com.google.android.material.appbar.AppBarLayout>
         <androidx.core.widget.NestedScrollView
@@ -40,24 +40,43 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <EditText
-                    android:id="@+id/search_text"
-                    android:layout_width="288dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="10dp"
-                    android:backgroundTint="#ED6868"
-                    android:drawableLeft="@drawable/ic_baseline_search_24"
-                    android:hint="검색어를 입력해주세요" />
+                    android:orientation="horizontal">
+                    <EditText
+                        android:id="@+id/search_text"
+                        android:layout_width="288dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="10dp"
+                        android:backgroundTint="#ED6868"
+                        android:drawableLeft="@drawable/ic_baseline_search_24"
+                        android:hint="검색어를 입력해주세요" />
 
-                <Button
-                    android:id="@+id/search"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Button" />
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/search"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Button" />
+                </LinearLayout>
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/review_recycler_view">
+                    </androidx.recyclerview.widget.RecyclerView>
+                    <FrameLayout
+                        android:id="@+id/photoFragment"
+                        android:layout_width="350dp"
+                        android:layout_height="451dp"
+                        android:layout_gravity="center_horizontal" />
+                </FrameLayout>
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
