--- a/app/src/main/res/layout/activity_review_search.xml
+++ b/app/src/main/res/layout/activity_review_search.xml
@@ -61,7 +61,16 @@
                         android:id="@+id/search"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Button" />
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:background="@drawable/round_circle3"
+                        android:fontFamily="@font/notosansbold"
+                        android:includeFontPadding="false"
+                        android:textColor="#ffffff"
+                        android:textSize="15sp"
+                        android:text="검색" />
                 </LinearLayout>
                 <FrameLayout
                     android:layout_width="match_parent"
