--- a/app/src/main/res/layout/activity_restaurant_search.xml
+++ b/app/src/main/res/layout/activity_restaurant_search.xml
@@ -62,9 +62,11 @@
                         android:layout_height="wrap_content"
                         android:text="Button" />
                 </LinearLayout>
+
                 <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/review_search_recyclerview"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content" />
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
